--- a/EserciziSettimana10/day02_30_05_23/src/app/components/post-non-attivi/post-non-attivi.component.html
+++ b/EserciziSettimana10/day02_30_05_23/src/app/components/post-non-attivi/post-non-attivi.component.html
@@ -5,11 +5,11 @@
     <div class="card m-3" style="width: 30rem;">
 
       <div class="card-body p-0">
-        <h5 class="card-header bg-tertiary">Post</h5>
-        <div class="p-2">
+        <h5 class="card-header bg-primary text-white">Post</h5>
+        <div class="p-4">
           <h5 class="card-title">{{item.title}}</h5>
           <p class="card-text">{{item.body}}</p>
-          <p class="card-text">ID: {{item.id}}</p>
+          <p class="card-text rounded-pill px-2 bg-success text-white" style="width: fit-content;">ID: {{item.id}}</p>
         </div>
       </div>
 
