--- a/EserciziSettimana10/day04_01_06_23/src/app/components/navbar/navbar.component.html
+++ b/EserciziSettimana10/day04_01_06_23/src/app/components/navbar/navbar.component.html
@@ -3,6 +3,6 @@
     <a [routerLink]="'/'" class="fs-3">TODOS</a>
   </div>
   <div>
-    <a routerLink="completed-task" class="fs-3">COMPLETATI</a>
+    <a [routerLink]="'completed-task'" class="fs-3">COMPLETATI</a>
   </div>
 </div>
