--- a/EserciziSettimana10/day04_01_06_23/src/app/components/todo/todo.component.html
+++ b/EserciziSettimana10/day04_01_06_23/src/app/components/todo/todo.component.html
@@ -43,7 +43,7 @@
   </div>
 
   <div>
-    <button type="button" class="btn bg-danger text-white" (click)="clearList()">RESET LIST</button>
+    <button type="button" class="btn bg-danger text-white" (click)="clearList()" [disabled]="todoList.length === 0 ? true : false">RESET LIST</button>
   </div>
 
 </div>
