--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/navbar/navbar.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/navbar/navbar.component.html
@@ -7,6 +7,6 @@
   </div>
   <div>
     <!-- alternare tra login e logout -->
-    <a>Logout</a>
+    <a [routerLink]="'login'">login</a>
   </div>
 </nav>
