--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
@@ -6,7 +6,7 @@
 
       <div class="col mb-3">
           <div class="card h-100" style="background-color: #1C1C1C">
-            <img src={{baseUrl+movie.poster_path}} class="card-img-top" alt="...">
+            <img [src]='baseUrl+movie.poster_path' class="card-img-top" alt="...">
             <div class="card-body yellowPar">
               <h5 class="card-title">{{movie.title}}</h5>
             </div>
