--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/welcomepage/welcomepage.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/welcomepage/welcomepage.component.html
@@ -1,2 +1,5 @@
-<h1>{{'benvenuto su streaming' | uppercase}}<span class="yellowPar">{{'pirata' | uppercase}}</span></h1>
-<h3>{{'trovi tutti i tuoi film preferiti' | uppercase }}</h3>
+<div class="mb-5">
+  <h1>{{'benvenuto su streaming' | uppercase}}<span class="yellowPar">{{'pirata' | uppercase}}</span></h1>
+  <h3>{{'trovi tutti i tuoi film preferiti' | uppercase }}</h3>
+</div>
+<h4 [innerText]="checkUserWelcome()"></h4>
