--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/navbar/navbar.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/navbar/navbar.component.html
@@ -5,8 +5,9 @@
     <a class="fs-5" [routerLink]="'favourites'">Favourites</a>
     <a class="fs-5" [routerLink]="'profile'">Profile</a>
   </div>
-  <div>
+  <div class="d-flex">
     <!-- alternare tra login e logout -->
-    <a [routerLink]="'login'">login</a>
+    <a class="mx-3" [routerLink]="'login'">Login </a>
+    <a class="mx-3" [routerLink]="'register'">Registrati </a>
   </div>
 </nav>
