--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
@@ -10,8 +10,8 @@
             <div class="card-body yellowPar">
               <h5 class="card-title">{{movie.title}}</h5>
             </div>
-            <div class="text-start">
-              <i class="bi bi-heart-fill mx-2 fs-3" style="color: rgba(255, 255, 255, 0.816);"></i>
+            <div *ngIf="flag" class="text-start">
+              <i class="bi bi-heart-fill mx-2 fs-3" style="color: rgba(255, 255, 255, 0.816);" (click)="addFavourite(movie.id)"></i>
             </div>
           </div>
         </div>
