--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/favouritespage/favouritespage.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/favouritespage/favouritespage.component.html
@@ -1,1 +1,31 @@
-<p>favouritespage works!</p>
+<div *ngIf="loading; else esleBlock">
+
+  <div *ngFor="let favMovie of arrFav">
+
+    <div class="row row-cols-3">
+
+      <div *ngFor="let movie of movies">
+
+        <div *ngIf="favMovie === movie.id">
+          <div class="col mb-3">
+            <div class="card h-100" style="background-color: #1C1C1C">
+              <img [src]='baseUrl+movie.poster_path' class="card-img-top" alt="...">
+              <div class="card-body yellowPar">
+                <h5 class="card-title">{{movie.title}}</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
+<ng-template #esleBlock>
+  <p>Loading Movies...</p>
+  <div class="spinner-border" role="status">
+    <span class="visually-hidden">Loading Movies...</span>
+  </div>
+</ng-template>
