--- a/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
+++ b/EserciziSettimana11/ProgettoSettimana11_08_06_23/src/app/components/moviepage/moviepage.component.html
@@ -11,7 +11,7 @@
               <h5 class="card-title">{{movie.title}}</h5>
             </div>
             <div *ngIf="flag" class="text-start">
-              <i class="bi bi-heart-fill mx-2 fs-3" style="color: rgba(255, 255, 255, 0.816);" (click)="addFavourite(movie.id)"></i>
+              <button type="button" class="btn" (click)="addFavourite(movie.id)"><i class="bi bi-heart-fill mx-2 fs-3" style="color: rgba(255, 255, 255, 0.816);" ></i></button>
             </div>
           </div>
         </div>
